# journey-of-panda

./: lab1.py
c++/c++_lab1/: CMakeLists.txt  main.cpp
c++_lab1/: CMakeLists.txt  main.cpp
models/: cube.blend
python/lab1/: l2-render-cube.py  lab1.py
